New Classes Added

--- a/GenshinDB.csproj
+++ b/GenshinDB.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Characters\ListWeapons.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Migrations\" />
     <Folder Include="wwwroot\res\images\" />
   </ItemGroup>
