--- a/GenshinDB.csproj
+++ b/GenshinDB.csproj
@@ -7,15 +7,27 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Repositories\Interfaces\ICharacterInterface.cs" />
+    <Compile Remove="Views\NovaPasta\**" />
+    <Content Remove="Views\NovaPasta\**" />
+    <EmbeddedResource Remove="Views\NovaPasta\**" />
+    <None Remove="Views\NovaPasta\**" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Repositories\Interfaces\ICharacterInterface.cs" />
+    <Compile Remove="Views\Characters\CharacterDetails.cshtml.cs" />
+    <Compile Remove="Views\Weapons\WeaponDetails.cshtml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Views\Characters\ListCharacters - Cópia.cshtml" />
     <Content Remove="Views\Characters\ListWeapons.cshtml" />
+    <Content Remove="Views\Weapons\Index.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="ViewModels\" />
     <Folder Include="wwwroot\res\images\" />
   </ItemGroup>
 
